# eeg-filters

./: .gitignore  LICENSE  README.md  eeg-filter.e4p  eeg-filters.e4p  file_dialog.py  install.sh  main.py  pyproject.toml  pyqt.py  pyqtgraph.ui  requirements.txt  settings.py  setup.py  setup.sh  start.sh  test_eeg.py  ui.py  update.sh
.eric6project/: TimeTracker.txt  eeg-filter.e4q  eeg-filter.e6t  project-apis.db
.github/workflows/: dev-actions.yml  main-actions.yml
eeg_filters/: __init__.py  data_importer.py  export.py  filters.py  setup.py  upload.py
input/: data.txt
scripts/: install.sh  start_test.sh
tests/: test_data_importer.py  test_export.py  test_filters.py
tests/data/: sample_data.txt  sample_data_edf.txt
