[tool.poetry]
name = "eeg-filters"
version = "0.0.8"
description = "Package for filtering EEG signals and EP (evoked potentials)."
authors = ["Iaroslav Pisarev"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
loguru = "^0.7.3"
pyedflib = "^0.1.40"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
flake8 = "^7.1.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
